# godxat

./: .gitignore  Dockerfile.build  package.json
.github/workflows/: release.yml
backend/: alembic.ini  render.yaml  requirements.txt  secure_chat5.db
backend/app/: .env  database.py  init_db.py  key_management.py  main.py  models.py  requirements.txt  schemas.py  secure_chat5.db  security.py
backend/app/routes/: auth.py  chat.py  user_status.py  websocket.py
backend/migrations/: env.py
backend/migrations/versions/: 0dafebf84e54_initial_migration.py  2139ef1f02b8_initial_migration.py  521bddbc2ae5_initial_migration.py  dbef6f035a03_initial_migration.py
backend/static/: index.html
backend/static/js/: chunk-vendors.bd15f013.js  chunk-vendors.bd15f013.js.map
frontend/: .env.production  package-lock.json  package.json  tailwind.config.js  vue.config.js
frontend/src/: App.vue  axios.js  config.js
frontend/src-tauri/: .gitignore  Cargo.toml  permissions.toml  tauri.conf.json
frontend/src-tauri/capabilities/: fs-read-home.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/assets/: main.css
frontend/src/components/: UserStatus.vue
frontend/src/router/: index.js
frontend/src/services/: auth_service.js  crypto_utils.js  key_storage.js  key_storage_factory.js  key_storage_web.js  message_service.js  session_manager.js  websocket_service.js
frontend/src/views/: LoginView.vue  MessageView.vue  RegisterView.vue
redis/: Dockerfile
updates/: render.yaml  requirements.txt
updates/app/: main.py
