[package]
name = "godxat"
version = "1.0.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

tauri-plugin-updater = "2.0.0-rc"
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-http = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-log = "2.0.0-rc"

[lib]
crate-type = ["rlib"]

