[package]
name = "godxat"
version = "1.0.8"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

tauri-plugin-updater = "2.0.0-rc"
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-http = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-log = "2.0.0-rc"

# Dependencias para el almacenamiento seguro de claves
once_cell = "1.18"
rand = "0.8"
rand_core = "0.6"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.21"
rsa = "0.9"
sha2 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
hmac = "0.12"  # o la última versión estable
tauri-utils = "2.4.0"
dirs-next = "2.0"

[lib]
crate-type = ["rlib"]
